# pref_shimane_cms

./: COPYING  NEWS
app/apis/: admin_api.rb
app/controllers/: admin_controller.rb  advertisement_controller.rb  application.rb  enquete_controller.rb  help_controller.rb  plugin_controller.rb  site_controller.rb  visitor_controller.rb  web_monitor_controller.rb  word_controller.rb
app/helpers/: admin_helper.rb  advertisement_helper.rb  application_helper.rb  enquete_helper.rb  help_helper.rb  login_helper.rb  mime_helper.rb  plugin_helper.rb  visitor_helper.rb  web_monitor_helper.rb  word_helper.rb
app/models/: action_master.rb  advertisement.rb  advertisement_list.rb  cms_action.rb  division.rb  emergency_info.rb  enquete_answer.rb  enquete_answer_item.rb  enquete_item.rb  enquete_item_value.rb  genre.rb  help.rb  help_action.rb  help_category.rb  help_content.rb  job.rb  lost_link.rb  news.rb  notify_mailer.rb  page.rb  page_content.rb  page_link.rb  page_lock.rb  page_revision.rb  section.rb  section_news.rb  site_components.rb  theme.rb  user.rb  web_monitor.rb  word.rb
cgi-bin/: enquete.cgi  enquete_cgi_test.rb  post_cgi.conf.example  post_cgi.conf.test  post_cgi.rb
config/: boot.rb  cms.yml.example  database.yml.example  environment.rb  routes.rb
db/: schema.rb
db/migrate/: 001_add_table_pages.rb  002_add_news_status_to_page.rb  003_add_last_modified_to_page.rb  004_add_table_sections.rb  005_add_table_page_status  006_add_tables_genre_pages_and_genres.rb  007_add_table_genre_categories.rb  008_add_field_comment_page_status.rb  009_add_directory_tree_table.rb  010_fix_pages_table.rb  011_fix_genres_table.rb  012_drop_directories_table.rb  013_add_index_for_search_genre_path.rb  014_add_table_users.rb  015_add_field_admin_in_sections.rb  016_add_field_authority_in_users.rb  017_add_field_published_in_pages_and_page_versions.rb  018_fix_field_page_statuses_table.rb  019_add_published_pages_table.rb  020_add_field_last_modified_in_published_page.rb  021_drop_news_statuses_and_page_statuses_and_add_news_table.rb  022_remove_section_id_from_pages_and_published_pages_tables.rb  023_add_table_genres_sections.rb  024_remove_field_section_id_in_genres.rb  025_change_page_schema.rb  026_move_comment_field_to_pages.rb  027_add_field_info_in_sections.rb  028_add_original_id_to_genres.rb  029_add_mail_to_users.rb  030_add_table_infos.rb  031_add_mobile_to_page_contents.rb  032_add_field_section_news_to_page_contents.rb  033_add_field_genre_id_to_sections.rb  034_add_table_jobs.rb  035_move_title_to_page.rb  036_add_field_news_title_to_page_contents.rb  037_add_table_page_status.rb  038_add_field_to_pages.rb  039_move_pages_field_to_page_contents.rb  040_add_field_order_and_link_in_sections.rb  (+51 more)
dict/: Makefile  chimei.dic  chimei.txt  custom.dic  to_chadic.rb
doc/: INSTALL  INSTALL.CentOS  apache2.conf.example  crontab.example  httpd.conf.example  lighttpd.conf.example
example/: apache.conf  crontab.cms
lib/: cleanup_html.rb  filter.rb  form_data_retriever.rb  login_system.rb  open-uri-override.rb  progressbar.rb  qrcode.rb  qrcode_img.rb  rubi_adder.rb
lib/htree/: traverse.rb
lib/spreadsheet/: workbook.rb
lib/tasks/: show_version.rake
lib/webclient/: link.rb
public/: .htaccess  config.html  config.html.r
public/javascripts/: admin.js  banner.js  common.js  equal_height_box.js  prototype.js  rounded_corners.conf.js  rounded_corners_lite.inc.js
public/stylesheets/: admin.css  advertisement.css  aural.css  banner.css  board.css  color.css  default.css  dirs.css  editor.css  editor_top.css  hc.css  help.css  hiki.css  home.css  lc.css  scaffold.css  theme.css  top.css  ud.css  visitor.css
test/: test_helper.rb
test/data/: excel.xls  msword.doc  open-office-org.odp  open-office-org.ods  open-office-org.odt  open-office-org.sxc  open-office-org.sxi  open-office-org.sxw  powerpoint.ppt  taro8.jtd  web_monitors.csv  web_monitors_error.csv
test/fixtures/: action_masters.yml  advertisements.yml  cms_actions.yml  divisions.yml  emergency_infos.yml  enquete_answer_items.yml  enquete_answers.yml  enquete_item_values.yml  enquete_items.yml  genres.yml  help_categories.yml  helps.yml  infos.yml  jobs.yml  lost_links.yml  page_contents.yml  page_links.yml  page_revisions.yml  pages.yml  sections.yml  site_components.yml  users.yml  web_monitors.yml  words.yml
test/functional/: admin_controller_test.rb  advertisement_controller_test.rb  enquete_controller_test.rb  help_controller_test.rb  plugin_controller_test.rb  site_controller_test.rb  visitor_controller_test.rb  web_monitor_controller_test.rb  word_controller_test.rb
test/unit/: action_master_test.rb  advertisement_list_test.rb  advertisement_test.rb  cms_action_test.rb  division_test.rb  emergency_info_test.rb  help_test.rb  (+27 more)
tool/: check_expired_advertisements  clear_news.rb  convert_help_data.rb  export  export_all  export_mp3  export_plugin  html2m3u  import  import_all  page_link_check.rb  retrieve_form_data  show_links  sync_to_www  transfer_form_data  unlock
tool/gtalk/gtalk/: Changelog  Makefile.in  README  README.ipadic  accent.c  accent.h  chaone.c  chaone.h  chasen.c  chasen_lib.c  chasenrc  chasenrc-win  command.h  configure  configure.in  confpara.h  da.h  defaults.h  dic.c  do_output.c  do_output.c.orig  do_output_sp.c  do_synthesis.c  fileIO.c  getline.c  hmmsynth.c  hmmsynth.h  main.c  make_aphrase.c  make_breath.c  make_duration.c  make_mora.c  make_parameter.c  make_phoneme.c  make_sentence.c  mecabrc  misc.c  misc.h  mlpg.c  mlpg.h  (+30 more)
tool/gtalk/gtalk/Release/: gtalk.pch  vc60.idb
tool/gtalk/morph/chaone-1.2.0/: 00readme.txt  FPAForm.xml  IPAForm.xml  Makefile.in  accent.xsl  accent_rule.xml  ap_rule.xml  chaone.c  chaone_t_EUC-JP.xsl  chaone_t_ISO-2022-JP.xsl  chaone_t_Shift_JIS.xsl  chaone_t_UTF-8.xsl  chaone_t_main.xsl  chunk_rules.xml  chunker.xsl  configure  configure.in  ea_symbol_table.xml  grammar.xml  kannjiyomi.xml  pa_word.xml  phonetic.xsl  prep.xsl
tool/gtalk/morph/chaone-1.2.0/sample/: test.accent.xml  test.chasen.xml  test.chunker.xml  test.pa.xml  test.prep.xml  test.txt
(+246 files in other folders)
